--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+logx_constants.py
+logx.py
+mathx.py
+matplotlibx.py
+pandasx_constants.py
+pandasx.py
+timex.py
+
 # Distribution / packaging
 .Python
 build/
